--- a/1ScarlettGame/index.html
+++ b/1ScarlettGame/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <script src="sketch.js"></script>
-  	<script src="player.js"></script>
-  	<script src="coins.js"></script>
+    <script src="witch.js"></script>
+    <script src="coins.js"></script>
+    <script src="enemies.js"></script>
+    <script src="player.js"></script>
 
 </body></html>
