--- a/ScarlettGame/index.html
+++ b/ScarlettGame/index.html
@@ -13,4 +13,24 @@
   	<script src="enemies.js"></script>
     <script src="player.js"></script>
 
-</body></html>
+</body>
+<style>
+    #image_container
+    {
+    margin-left: auto;
+    margin-right: auto;
+    width: 650px;
+    position: relative;
+    }
+    #canvas_container
+    {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    }
+    #map_canvas
+    {
+    }
+</style>
+
+</html>
