--- a/4gamestages/index.html
+++ b/4gamestages/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
+	<title>Scarlett's Game</title>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -9,6 +10,7 @@
     <script src="sketch.js"></script>
   	<script src="player.js"></script>
   	<script src="coins.js"></script>
-  	<script src="witch.js"></script>
+  	<script src="enemies.js"></script>
+
 
 </body></html>
