--- a/2ScarlettGame/index.html
+++ b/2ScarlettGame/index.html
@@ -8,9 +8,12 @@
   </head>
   <body>
     <script src="sketch.js"></script>
-  	<script src="player.js"></script>
+  	<script src="witch.js"></script>
   	<script src="coins.js"></script>
   	<script src="enemies.js"></script>
+    <script src="player.js"></script>
+
+</body>
 
 
-</body></html>
+</html>
