--- a/ScarlettGame/index.html
+++ b/ScarlettGame/index.html
@@ -7,6 +7,7 @@
 
   </head>
   <body>
+
     <script src="sketch.js"></script>
   	<script src="player.js"></script>
   	<script src="coins.js"></script>
@@ -14,3 +15,11 @@
 
 
 </body></html>
+<style>
+body {
+  background-image: url("winnerImg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style> 
