--- a/ScarlettGame/index.html
+++ b/ScarlettGame/index.html
@@ -17,7 +17,7 @@
 </body></html>
 <style>
 body {
-  background-image: url("winnerImg");
+  background-image: url("https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/11c57d86-4eb1-4d64-a565-ca189b5f2da4/deaaga3-eb5ffda7-33f3-431f-8527-12112fc3546b.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvMTFjNTdkODYtNGViMS00ZDY0LWE1NjUtY2ExODliNWYyZGE0XC9kZWFhZ2EzLWViNWZmZGE3LTMzZjMtNDMxZi04NTI3LTEyMTEyZmMzNTQ2Yi5wbmcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.AAQ-HLsPwQW4oXu8gPNd9Djy6BrjF88dyetDPAgGgto");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
